--- a/vscode-background-image/vscode-background-image/ws-compact-layout.css
+++ b/vscode-background-image/vscode-background-image/ws-compact-layout.css
@@ -188,7 +188,7 @@
 .monaco-workbench:not(.mac):not(.web) .part.titlebar .window-controls-container.show-layout-control > .layout-dropdown-container {
   min-width: unset !important;
 	line-height: 22px !important;
-	width: 32px !important;
+	width: unset !important;
 	font-size: 16px !important;
 }
 .monaco-workbench .part.titlebar .window-controls-container > .window-icon {
